k8s/infrastructure/gateway/overlays/prod/gw-external.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  namespace: gateway
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 10.1.20.111
  listeners:
    - protocol: HTTPS
      port: 443
      name: https-gateway
      hostname: "*.eudald.gr"
      tls:
        certificateRefs:
          - kind: Secret
            name: cert-eudald
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTPS
      port: 443
      name: https-domain-gateway
      hostname: eudald.gr
      tls:
        certificateRefs:
          - kind: Secret
            name: cert-eudald
      allowedRoutes:
        namespaces:
          from: All
