k8s/infrastructure/gateway/overlays/prod/gw-tls-passthrough.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tls-passthrough
  namespace: gateway
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 10.1.20.113
  listeners:
    - protocol: TLS
      port: 443
      name: pve01
      hostname: "pve01.home.eudald.gr"
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
    - protocol: TLS
      port: 443
      name: pve02
      hostname: "pve02.home.eudald.gr"
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
    - protocol: TLS
      port: 443
      name: synology
      hostname: "ds920plus.home.eudald.gr"
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
    - protocol: TLS
      port: 443
      name: omada
      hostname: "omada.home.eudald.gr"
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
